All Java source files widened from 80 to 100 columns